<resources>
    <string name="app_name">EtherChusky</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Registrer</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="wrong_email">Wrong email</string>
    <string name="min_length_pass">Min length: 6 chars</string>
    <string name="pass_dont_match">Passwords do not match</string>


    <string name="title_activity_main">Main Activity</string>
    <string name="your_account">Your account</string>
    <string name="user">User</string>
    <string name="balance">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount (Chuskis)</string>
    <string name="destination">Destination user</string>
    <string name="pay">Pay</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="select_destination_user">Select destination user</string>
    <string name="transaction">Transaction</string>
</resources>
